fix sonar issues
Signed-off-by: Luma <zamarrenolm@aia.es>